--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 
 <body>
+   
     <header class="container-cabecalho">
         <img class="logo" src="Assets/Ft-Perfil.jpg" />
         <div class="container-info-perfil">
 
             <div class="container-header">
                 <h1 class="nome-perfil">casarefugiododouro</h1>
-                <button onclick=alert() class="button-info-perfil">A seguir</button>
-                <button onclick=alert() class="button-info-perfil">Enviar Mensagenm</button>
-                <img onclick="" class="icon " src="Assets/Add.webp" height="24px" width="24px" alt="add">
-                <img onclick="" class="icon " src="Assets/engrenagem.png" height="24px" width="24px" alt="engrenagem">
+                <button onclick=alert(seguir) class="button-info-perfil">A seguir</button>
+                <button onclick=alert(enviar_msg) class="button-info-perfil">Enviar Mensagem</button>
+                <img onclick=alert(add) class="icon " src="Assets/Add.webp" height="24px" width="24px" alt="add">
+                <img onclick=alert(enviar_msg) class="icon " src="Assets/engrenagem.png" height="24px" width="24px" alt="engrenagem">
 
             </div>
             <div class="container-flex-row">
@@ -82,7 +83,7 @@
         <img class="colecao-img-destaque" src="Assets/Foto5.jpg" alt="5">
         <img class="colecao-img-destaque" src="Assets/Foto6.jpg" alt="6">
     </section>
-
+<script src="JS/script.js"></script>
 </body>
 
 </html>
